--- a/cirec2/app/templates/articles/detail.html
+++ b/cirec2/app/templates/articles/detail.html
@@ -1,3 +1,5 @@
+<!-- cirec2/app/templates/articles/detail.html -->
+
 {% extends "base.html" %}
 
 {% block title %}{{ article.title }} - CIREC{% endblock %}
