--- a/cirec2/app/templates/search/results.html
+++ b/cirec2/app/templates/search/results.html
@@ -1,3 +1,5 @@
+<!-- cirec2/app/templates/search/results.html -->
+
 {% extends "base.html" %}
 
 {% block title %}Search Results - CIREC{% endblock %}
